# aws-assume

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  cli.py  core.py  pyproject.toml  test_cli.py  test_core.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  stale.yml
aws_assume/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
